made some changes on user profile

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -54,16 +54,11 @@
     </header>
 
     <div class="col-lg-4 col-md-12 pt-100 pb-100 center">
-      <h1 class="center-text">Sign Up</h1>
-      <form class="form-area" action="/signup" method="post" class="contact-form text-right">
-        <input name="name" placeholder="Enter full name" class="common-input mt-10" required type="text">
-        <input name="age" placeholder="Age" class="common-input mt-10" required type="text">
-        <input name="branch" placeholder="Branch served" class="common-input mt-10" required type="text">
-        <input name="gender" placeholder="Gender" class="common-input mt-10" required type="text">
-        <input name="city" placeholder="City" class="common-input mt-10" required type="text">
+      <h1 class="center-text">Log in</h1>
+      <form class="form-area" action="/login" method="post" class="contact-form text-right">
         <input name="email" placeholder="Enter email address" class="common-input mt-10" required type="email">
         <input name="password" placeholder="Enter your password" class="common-input mt-10" required type="password">
-        <input type="submit" class="primary-btn mt-20" value="Sign Up" >
+        <input type="submit" class="primary-btn mt-20" value="Log in" >
         <div class="alert-msg">
         </div>
       </form>
