--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
 			<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 			<link rel="stylesheet" href="/css/bootstrap.css">
 			<link rel="stylesheet" href="/css/main.css">
+			<link rel="stylesheet" href="/css/custom.css">
 		</head>
 		<body>
 
@@ -64,14 +65,15 @@
 									it’ll inside the World
 								</h1>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
-								<a href="/signup" class="primary-btn">Sign Up<span class="lnr lnr-arrow-right"></span></a>
+								<a href="/signup" class="primary-btn" style="margin-right: 2rem;">Sign Up<span class="lnr lnr-arrow-right"></span></a>
+								<a href="/login" class="primary-btn">Log in<span class="lnr lnr-arrow-right"></span></a>
 							</div>
 						</div>
 				</div>
 			</section>
 			<!-- End banner Area -->
 
-			<!-- Start booking Area -->
+			<!-- Start booking Area
 			<section class="booking-area" id="booking">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
@@ -91,7 +93,6 @@
 								  </li>
 							</ul>
 
-							<!-- Tab panes -->
 							<div class="tab-content">
 							  <div role="tabpanel" class="tab-pane fade in active" id="flights">
 							  	<h4>Book Your Flights</h4>
@@ -214,10 +215,8 @@
 					</div>
 				</div>
 			</section>
-			<!-- End booking Area -->
 
 
-			<!-- Start feature Area -->
 			<section class="feature-area section-gap">
 				<div class="container">
 					<div class="row">
@@ -257,9 +256,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- End feature Area -->
 
-			<!-- Start packages Area -->
 			<section class="packages-area" id="package">
 				<div class="container-fluid">
 					<div class="row d-flex justify-content-center">
@@ -340,9 +337,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- End packages Area -->
 
-			<!-- Start blog Area -->
 			<section class="blog-area section-gap">
 				<div class="container">
 					<div class="row justify-content-center">
@@ -418,9 +413,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- End blog Area -->
 
-			<!-- Start about Area -->
 			<section class="about-area">
 				<div class="container-fluid">
 					<div class="row d-flex justify-content-end align-items-center">
@@ -439,9 +432,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- End about Area -->
 
-			<!-- Start contact-info Area -->
 			<section class="contact-info-area section-gap">
 				<div class="container">
 					<div class="row">
@@ -480,9 +471,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- End contact-info Area -->
 
-			<!-- Start Contact Area -->
 			<section class="contact-area" id="contact">
 				<div class="container-fluid">
 					<div class="row align-items-center d-flex justify-content-start">
@@ -503,9 +492,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- End Contact Area -->
 
-			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 				<div class="container">
 					<div class="row">
@@ -563,14 +550,12 @@
 					</div>
 					<div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
 						<p class="footer-text m-0">
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
 						</p>
 					</div>
 				</div>
-			</footer>
-			<!-- End footer Area -->
+			</footer> -->
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
