--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/custom.css">
   </head>
   <body>
 
@@ -53,26 +54,16 @@
     </header>
     <!-- End Header Area -->
 
-    <!-- start banner Area -->
-    <section class="banner-area relative" id="home">
-      <div class="overlay overlay-bg"></div>
-      <div class="container">
-          <div class="row fullscreen align-items-center justify-content-start" style="height: 915px;">
-            <div class="banner-content col-lg-9 col-md-12">
-              <h1>
-                Wherever you go  <br>
-                it’ll inside the World
-              </h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
-              <a href="#" class="primary-btn">See Details<span class="lnr lnr-arrow-right"></span></a>
-            </div>
-          </div>
-      </div>
-    </section>
-    <!-- End banner Area -->
-
-    <h1>Profile page</h1>
-
+    <h1>Profile Page</h1>
+    <h2>Welcome, <%= user.local.name %>!</h2>
+    <div style="border: 1px solid;" class="profileInfo">
+      <h3>Branch: <%= user.local.branch %></h3>
+      <h3>Age: <%= user.local.age %></h3>
+      <h3>Gender: <%= user.local.gender %></h3>
+      <h3>location: <%= user.local.city %></h3>
+    </div>
+    <a href="/logout" class="primary-btn">Log out<span class="lnr lnr-arrow-right"></span></a>
+    <a href="/allUsers" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
       <div class="container">
