adding delete function

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -64,6 +64,7 @@
     </div>
     <a href="/logout" class="primary-btn">Log out<span class="lnr lnr-arrow-right"></span></a>
     <a href="/allUsers" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
+    <a href="/cancel" class="primary-btn">Delete Account<span class="lnr lnr-arrow-right"></span></a>
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
       <div class="container">
