Updated routes and added to profile.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -567,5 +567,6 @@
 			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 			<script src="js/jquery.magnific-popup.min.js"></script>
 			<script src="js/main.js"></script>
+			<script src="main.js"></script>
 		</body>
 	</html>
