--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -64,7 +64,7 @@
     </div>
     <a href="/logout" class="primary-btn">Log out<span class="lnr lnr-arrow-right"></span></a>
     <a href="/allUsers" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
-    <a href="/cancel" class="primary-btn">Delete Account<span class="lnr lnr-arrow-right"></span></a>
+    <a href="/cancel" id="cancel" class="primary-btn">Delete Account<span class="lnr lnr-arrow-right"></span></a>
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
       <div class="container">
@@ -131,7 +131,6 @@
       </div>
     </footer>
     <!-- End footer Area -->
-
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
@@ -142,5 +141,6 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
