--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -63,7 +63,7 @@
       <h3>location: <%= user.local.city %></h3>
     </div>
     <a href="/logout" class="primary-btn">Log out<span class="lnr lnr-arrow-right"></span></a>
-    <a href="/allUsers" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
+    <a href="/connect" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
     <a href="/cancel" id="cancel" class="primary-btn">Delete Account<span class="lnr lnr-arrow-right"></span></a>
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
