--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Travel Asia</title>
+		<title>Vet Connect</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
@@ -59,12 +59,11 @@
 				<div class="overlay overlay-bg"></div>
 				<div class="container">
 						<div class="row fullscreen align-items-center justify-content-start" style="height: 915px;">
-							<div class="banner-content col-lg-9 col-md-12">
+							<div class="banner-content col-lg-10 col-md-12">
 								<h1>
-									Wherever you go  <br>
-									it’ll inside the World
+									Vet Connect<br>
 								</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
+								<p>Connecting veterans for the greater good. Forging the bonds between brothers and sisters in arms once again.</p>
 								<a href="/signup" class="primary-btn" style="margin-right: 2rem;">Sign Up<span class="lnr lnr-arrow-right"></span></a>
 								<a href="/login" class="primary-btn">Log in<span class="lnr lnr-arrow-right"></span></a>
 							</div>
@@ -556,7 +555,10 @@
 					</div>
 				</div>
 			</footer> -->
-
+			<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+			<script>
+			  var socket = io();
+			</script> -->
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>
@@ -566,7 +568,5 @@
 			<script src="js/parallax.min.js"></script>
 			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 			<script src="js/jquery.magnific-popup.min.js"></script>
-			<script src="js/main.js"></script>
-			<script src="main.js"></script>
 		</body>
 	</html>
