Got multer to work to add profile pic to profile and connect pages

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,3 +9,14 @@
 .form-area {
   margin: 0;
 }
+
+.proImg{
+  height: 300px;
+  width: 300px;
+}
+
+.randomPro{
+  border: 1px solid;
+  margin: 2rem;
+  padding: 2rem;
+}
