--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -57,13 +57,19 @@
     <h1>Profile Page</h1>
     <h2>Welcome, <%= user.local.name %>!</h2>
     <div style="border: 1px solid;" class="profileInfo">
+      <img class="proImg" src="<%= user.pic %>"/>
       <h3>Branch: <%= user.local.branch %></h3>
       <h3>Age: <%= user.local.age %></h3>
       <h3>Gender: <%= user.local.gender %></h3>
-      <h3>location: <%= user.local.city %></h3>
+      <h3>Location: <%= user.local.city %></h3>
+      <form action="/up" enctype="multipart/form-data" method="POST">
+        <input type="file" placeholder="picture" name="pic">
+        <input type="hidden" name="userId" value=<%= user._id %>>
+        <button type="submit">Submit</button>
+      </form>
     </div>
     <a href="/logout" class="primary-btn">Log out<span class="lnr lnr-arrow-right"></span></a>
-    <a href="/connect" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
+    <a href="/connect?userName=<%= user.local.name %>" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
     <a href="/cancel" id="cancel" class="primary-btn">Delete Account<span class="lnr lnr-arrow-right"></span></a>
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
@@ -124,7 +130,7 @@
         <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
           <p class="footer-text m-0">
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+          <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
@@ -141,6 +147,6 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
