--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/chat.css">
   </head>
   <body>
 
@@ -41,10 +41,10 @@
             </div>
             <div class="main-menubar d-flex align-items-center">
               <nav class="hide">
-                <a href="#home">Home</a>
-                <a href="#booking">Booking</a>
-                <a href="#package">Packages</a>
-                <a href="#contact">Contact</a>
+                <a href="#home">Lorem</a>
+                <a href="#booking">Ipsum</a>
+                <a href="#package">Dolor</a>
+                <a href="#contact">Sit</a>
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
             </div>
