--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,10 +41,10 @@
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
-									<a href="#home">Home</a>
-									<a href="#booking">Booking</a>
-									<a href="#package">Packages</a>
-									<a href="#contact">Contact</a>
+									<a href="#home">Lorem</a>
+									<a href="#booking">Ipsum</a>
+									<a href="#package">Dolor</a>
+									<a href="#contact">Sit</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -568,5 +568,6 @@
 			<script src="js/parallax.min.js"></script>
 			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 			<script src="js/jquery.magnific-popup.min.js"></script>
+			<script src="js/main.js" type="text/javascript"></script>
 		</body>
 	</html>
