--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -54,7 +54,34 @@
     </header>
     <!-- End Header Area -->
 
-    <ul id="messages"></ul>
+    <div class="col-sm-6">
+      <h3>Messages</h3>
+      <ul class="messages">
+      <% for(var i=0; i<messages.length; i++) {%>
+        <li class="message">
+          <span><%= messages[i].name %></span>
+          <span><%= messages[i].msg %></span>
+        </li>
+      <% } %>
+      </ul>
+
+      <h2>Add a message</h2>
+    <% if (user.local.name) { %>
+      <form action="/send" method="POST">
+        <input type="text" value="<%= user.local.name %>" name="name">
+        <input type="text" placeholder="message" name="msg">
+        <button type="submit">Send</button>
+      </form>
+    </div>
+    <% } %>
+
+    <!-- <form class="" action="send" method="post">
+      <input type="text" name="message" value="">
+      <button type="submit" name="send">Send</button>
+    </form> -->
+
+
+    <!-- <ul id="messages"></ul>
      <form action="">
        <input id="m" autocomplete="off" /><button>Send</button>
      </form>
@@ -77,7 +104,7 @@
           $('#messages').append($('<li>').text(msg));
         });
       });
-    </script>
+    </script> -->
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
