--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,10 +41,10 @@
             </div>
             <div class="main-menubar d-flex align-items-center">
               <nav class="hide">
-                <a href="#home">Lorem</a>
-                <a href="#booking">Ipsum</a>
-                <a href="#package">Dolor</a>
-                <a href="#contact">Sit</a>
+                <a href=#index.ejs>Home</a>
+                <a href=#login.ejs>Log In</a>
+                <a href=#signup.ejs>Sign Up</a>
+                <a href=#connect.ejs>Connect</a>
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
             </div>
@@ -54,11 +54,11 @@
     </header>
 
     <div class="col-lg-4 col-md-12 pt-100 pb-100 center">
-      <h1 class="center-text">Log in</h1>
+      <h1 class="center-text">Log In</h1>
       <form class="form-area" action="/login" method="post" class="contact-form text-right">
         <input name="email" placeholder="Enter email address" class="common-input mt-10" required type="email">
         <input name="password" placeholder="Enter your password" class="common-input mt-10" required type="password">
-        <input type="submit" class="primary-btn mt-20" value="Log in" >
+        <input type="submit" class="primary-btn mt-20" value="Log In">
         <div class="alert-msg">
         </div>
       </form>
