--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,8 +1,3 @@
-.logo{
-  height: 100px;
-  width: 200px;
-}
-
 .center {
   margin: 0 auto;
 }
@@ -24,4 +19,35 @@
   border: 1px solid;
   margin: 2rem;
   padding: 2rem;
+}
+
+.profileInfo, .proButtons, h2{
+  margin-left: 3%;
+  margin-bottom: 20px;
+}
+
+.addPic{
+  margin-top: 10px;
+}
+
+.search{
+  border: 1px solid gray;
+  height: 20px;
+  width: 80%;
+  font-size: 14px;
+}
+
+.searchForm{
+  margin-left: 20px;
+}
+
+.pageTitle{
+  font-size: 60px;
+  margin-left: 3%;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+h3{
+  margin-bottom: 5px;
 }
