--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -17,9 +17,9 @@
   <title>Vet Connect</title>
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
-    <!--
-    CSS
-    ============================================= -->
+
+    <!-- CSS ============================================= -->
+
     <link rel="stylesheet" href="/css/linearicons.css">
     <link rel="stylesheet" href="/css/owl.carousel.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/chat.css">
+    <link rel="stylesheet" href="/css/custom.css">
   </head>
   <body>
 
@@ -41,10 +42,10 @@
             </div>
             <div class="main-menubar d-flex align-items-center">
               <nav class="hide">
-                <a href="#home">Lorem</a>
-                <a href="#booking">Ipsum</a>
-                <a href="#package">Dolor</a>
-                <a href="#contact">Sit</a>
+                <a href=#index.ejs>Home</a>
+                <a href=#login.ejs>Log In</a>
+                <a href=#signup.ejs>Sign Up</a>
+                <a href=#connect.ejs>Connect</a>
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
             </div>
@@ -54,11 +55,75 @@
     </header>
     <!-- End Header Area -->
 
-
+    <!-- Start Footer Area -->
+    <footer class="footer-area section-gap">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3  col-md-6 col-sm-6">
+            <div class="single-footer-widget">
+              <h6>About Us</h6>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3  col-md-6 col-sm-6">
+            <div class="single-footer-widget">
+              <h6>Newsletter</h6>
+              <p>Stay update with our latest</p>
+              <div class="d-flex flex-row" id="mc_embed_signup">
+                <form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
+                  <input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                  <div style="position: absolute; left: -5000px;">
+                    <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                  </div>
+                  <button class="btn bb-btn"><span class="lnr lnr-arrow-right"></span></button>
+                  <div class="info"></div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3  col-md-6 col-sm-6">
+            <div class="single-footer-widget mail-chimp">
+              <h6 class="mb-20">Instragram Feed</h6>
+              <ul class="instafeed d-flex flex-wrap">
+                <li><img src="img/i1.jpg" alt=""></li>
+                <li><img src="img/i2.jpg" alt=""></li>
+                <li><img src="img/i3.jpg" alt=""></li>
+                <li><img src="img/i4.jpg" alt=""></li>
+                <li><img src="img/i5.jpg" alt=""></li>
+                <li><img src="img/i6.jpg" alt=""></li>
+                <li><img src="img/i7.jpg" alt=""></li>
+                <li><img src="img/i8.jpg" alt=""></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="single-footer-widget">
+              <h6>Follow Us</h6>
+              <p>Let us be social</p>
+              <div class="footer-social d-flex align-items-center">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-dribbble"></i></a>
+                <a href="#"><i class="fa fa-behance"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
+          <p class="footer-text m-0">
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <ul id="messages"></ul>
-     <form action="">
-       <input id="m" autocomplete="off" /><button>Send</button>
+     <form class="chat" action="">
+       <input id="m" autocomplete="off" /><button class="chatSend bb-btn">Send</button>
      </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
@@ -92,7 +157,6 @@
         }
         });
       });
-
     </script>
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
