--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -41,12 +41,16 @@
             </div>
             <div class="main-menubar d-flex align-items-center">
               <nav class="hide">
-                <a href="#home">Home</a>
-                <a href="#booking">Booking</a>
-                <a href="#package">Packages</a>
-                <a href="#contact">Contact</a>
+                <a href=#index.ejs>Home</a>
+                <a href=#login.ejs>Log In</a>
+                <a href=#signup.ejs>Sign Up</a>
+                <a href=#connect.ejs>Connect</a>
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+              <form class="searchForm"action="/search">
+                <input class="search" type="text" method="POST" placeholder="Search" name="search">
+                <button class="searchButton" type="submit"><i class="fa fa-search"></i></button>
+              </form>
             </div>
           </div>
         </div>
@@ -55,19 +59,8 @@
     <!-- End Header Area -->
 
     <!-- Start Banner Area -->
-    <!-- <section class="banner-area relative" id="home">
-      <div class="overlay overlay-bg"></div>
-      <div class="container">
-          <div class="row fullscreen align-items-center justify-content-start" style="height: 915px;">
-            <div class="banner-content col-lg-9 col-md-12">
-              <h1>
-                Connect with others
-              </h1>
-            </div>
-          </div>
-      </div>
-    </section> -->
-    <h1>Connect with a user</h1>
+
+    <h1 class="pageTitle">Connect With A User</h1>
     <div class="col-sm-6">
       <div class="randomPro">
         <% if(randomUser.pic) { %>
@@ -111,7 +104,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3  col-md-6 col-sm-6">
+          <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="single-footer-widget mail-chimp">
               <h6 class="mb-20">Instragram Feed</h6>
               <ul class="instafeed d-flex flex-wrap">
@@ -161,13 +154,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script>
       $(function () {
-          var socket = io();
-          socket.on('chat message', function (msg) {
-              const jsonMsg = JSON.parse(msg)
-              if (jsonMsg.to === "<%= userName %>" || jsonMsg.from === "<%= userName %>") {
-                  window.location.href = "/chat?userName=<%= userName %>&chatwith=" + jsonMsg.from + "&firstMsg=" + jsonMsg.msg
-              }
-          });
+        var socket = io();
+        socket.on('chat message', function (msg) {
+          const jsonMsg = JSON.parse(msg)
+          if (jsonMsg.to === "<%= userName %>" || jsonMsg.from === "<%= userName %>") {
+            window.location.href = "/chat?userName=<%= userName %>&chatwith=" + jsonMsg.from + "&firstMsg=" + jsonMsg.msg
+          }
+        });
       });
     </script>
   </body>
