--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,7 +32,6 @@
   <body>
 
     <!-- Start Header Area -->
-    
     <header class="default-header">
       <div class="container">
         <div class="header-wrap">
@@ -42,12 +41,16 @@
             </div>
             <div class="main-menubar d-flex align-items-center">
               <nav class="hide">
-                <a href="#home">Home</a>
-                <a href="#booking">Booking</a>
-                <a href="#package">Packages</a>
-                <a href="#contact">Contact</a>
+                <a href=#index.ejs>Home</a>
+                <a href=#login.ejs>Log In</a>
+                <a href=#signup.ejs>Sign Up</a>
+                <a href=#connect.ejs>Connect</a>
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+              <form class="searchForm"action="/search">
+                <input class="search" type="text" method="POST" placeholder="Search" name="search">
+                <button class="searchButton" type="submit"><i class="fa fa-search"></i></button>
+              </form>
             </div>
           </div>
         </div>
@@ -56,26 +59,30 @@
 
     <!-- End Header Area -->
 
-    <h1>Profile Page</h1>
+    <h1 class="pageTitle">Profile Page</h1>
     <h2>Welcome, <%= user.local.name %>!</h2>
-    <div style="border: 1px solid;" class="profileInfo">
+    <div class="profileInfo">
       <img class="proImg" src="<%= user.pic %>"/>
       <h3>Branch: <%= user.local.branch %></h3>
       <h3>Age: <%= user.local.age %></h3>
       <h3>Gender: <%= user.local.gender %></h3>
       <h3>Location: <%= user.local.city %></h3>
-      <form action="/up" enctype="multipart/form-data" method="POST">
-        <input type="file" placeholder="picture" name="pic">
-        <input type="hidden" name="userId" value=<%= user._id %>>
-        <button type="submit">Submit</button>
-      </form>
+      <fieldset>
+        <legend>Add a Picture</legend>
+        <form class= "addPic" action="/up" enctype="multipart/form-data" method="POST">
+          <input type="file" placeholder="picture" name="pic">
+          <input type="hidden" name="userId" value=<%= user._id %>>
+          <button type="submit">Submit</button>
+        </form>
+      </fieldset>
     </div>
-    <a href="/logout" class="primary-btn">Log out<span class="lnr lnr-arrow-right"></span></a>
-    <a href="/connect?userName=<%= user.local.name %>" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
-    <a href="/cancel" id="cancel" class="primary-btn">Delete Account<span class="lnr lnr-arrow-right"></span></a>
+    <div class="proButtons">
+      <a href="/logout" class="primary-btn">Log out<span class="lnr lnr-arrow-right"></span></a>
+      <a href="/connect?userName=<%= user.local.name %>" class="primary-btn">Connect with others<span class="lnr lnr-arrow-right"></span></a>
+      <a href="/cancel" id="cancel" class="primary-btn">Delete Account<span class="lnr lnr-arrow-right"></span></a>
+    </div>
 
     <!-- start footer Area -->
-
     <footer class="footer-area section-gap">
       <div class="container">
         <div class="row">
@@ -141,6 +148,7 @@
       </div>
     </footer>
     <!-- End footer Area -->
+
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
