--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -145,5 +145,6 @@
     <script src="js/parallax.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
