--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -57,46 +57,49 @@
     <!-- Start Banner Area -->
 
     <h1 class="pageTitle">Connect With A User</h1>
-    <div class="col-sm-6">
-      <div class="randomPro">
-        <% if(randomUser.pic) { %>
-          <img class="proImg" src="<%= randomUser.pic %>" />
-        <% } %>
-        <h3>Name:   <%= randomUser.local.name %></h3>
-        <h3>Age:    <%= randomUser.local.age %></h3>
-        <h3>Branch: <%= randomUser.local.branch %></h3>
-        <h3>City:   <%= randomUser.local.city %></h3>
-        <a class="btn btn-success" href="/chat?userName=<%= userName %>&chatwith=<%= randomUser.local.name %>">&#10003;</a>
-        <a class="btn btn-danger" href="/connect?userName=<%= userName %>">&#x2717;</a>
-      </div>
-    </div>
+      <section class="area">
+        <div class="randomPro">
+          <h2 class"suggest">Suggested User</h2>
+          <% if(randomUser.pic) { %>
+            <img class="proImg" src="<%= randomUser.pic %>" />
+          <% } %>
+          <h3>Name:   <%= randomUser.local.name %></h3>
+          <h3>Age:    <%= randomUser.local.age %></h3>
+          <h3>Branch: <%= randomUser.local.branch %></h3>
+          <h3>City:   <%= randomUser.local.city %></h3>
+          <a class="btn btn-success" href="/chat?userName=<%= userName %>&chatwith=<%= randomUser.local.name %>">&#10003;</a>
+          <a class="btn btn-danger" href="/connect?userName=<%= userName %>">&#x2717;</a>
+        </div>
 
-    <div class="searching">
-    <fieldset class="ageSearch">
-      <legend>Search by Age</legend>
-      <form class="searchForm" method="POST" action="/search">
-        <input class="search" type="text" placeholder="Minimum Age" name="ageMin">
-        <input class="search" type="text" placeholder="Maximum Age" name="ageMax">
-        <button class="searchButton" type="submit"><i class="fa fa-search"></i></button>
-      </form>
-    </fieldset>
-    </div>
+        <section class="diffSearches">
+          <div class="searching">
+          <fieldset class="ageSearch">
+            <legend>Search by Age</legend>
+            <form class="searchForm" method="POST" action="/search">
+              <input class="search" type="text" placeholder="Minimum Age" name="ageMin">
+              <input class="search" type="text" placeholder="Maximum Age" name="ageMax">
+              <button class="searchButton" type="submit"><i class="fa fa-search"></i></button>
+            </form>
+          </fieldset>
+          </div>
 
-    <div class="searching">
-    <fieldset class="branchSearch">
-      <legend>Search by Branch</legend>
-      <form class="searchForm" method="POST" action="/search">
-        <select class="" name="branch">
-          <option>Air Force</option>
-          <option>Army</option>
-          <option>Coast Guard</option>
-          <option>Navy</option>
-          <option>Marines</option>
-        </select>
-        <button class="searchButton" type="submit"><i class="fa fa-search"></i></button>
-      </form>
-    </fieldset>
-    </div>
+          <div class="searching">
+          <fieldset class="branchSearch">
+            <legend>Search by Branch</legend>
+            <form class="searchForm" method="POST" action="/search">
+              <select class="" name="branch">
+                <option>Air Force</option>
+                <option>Army</option>
+                <option>Coast Guard</option>
+                <option>Navy</option>
+                <option>Marines</option>
+              </select>
+              <button class="searchButton" type="submit"><i class="fa fa-search"></i></button>
+            </form>
+          </fieldset>
+          </div>
+        </section>
+      </section>
 
     <footer class="footer-area section-gap">
       <div class="container">
