--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,9 +41,9 @@
 						</div>
 						<div class="main-menubar d-flex align-items-center">
 							<nav class="hide">
-								<a href="#index.ejs">Home</a>
-								<a href="#login.ejs">Log In</a>
-								<a href="#signup.ejs">Sign Up</a>
+								<a href="/">Home</a>
+								<a href="/login">Log In</a>
+								<a href="/signup">Sign Up</a>
 								<a href="#connect.ejs">Connect</a>
 							</nav>
 							<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
