--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -41,10 +41,10 @@
             </div>
             <div class="main-menubar d-flex align-items-center">
               <nav class="hide">
-                <a href="#home">Home</a>
-                <a href="#booking">Booking</a>
-                <a href="#package">Packages</a>
-                <a href="#contact">Contact</a>
+                <a href="/">Home</a>
+                <a href="/login">Log In</a>
+                <a href="/signup">Sign Up</a>
+                <a href="#connect.ejs">Connect</a>
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
             </div>
