--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -44,7 +44,7 @@
                 <a href="/">Home</a>
                 <a href="/login">Log In</a>
                 <a href="/signup">Sign Up</a>
-                <a href="#connect.ejs">Connect</a>
+                <!-- <a href="#connect.ejs">Connect</a> -->
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
             </div>
@@ -93,6 +93,7 @@
                 <option>Coast Guard</option>
                 <option>Navy</option>
                 <option>Marines</option>
+                <option>Space Force</option>
               </select>
               <button class="searchButton" type="submit"><i class="fa fa-search"></i></button>
             </form>
@@ -108,7 +109,7 @@
             <div class="single-footer-widget">
               <h6>About Us</h6>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+                Created as a way to get veterans to connect together and help eachother as they transition back into society
               </p>
             </div>
           </div>
