--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
 								<a href="/">Home</a>
 								<a href="/login">Log In</a>
 								<a href="/signup">Sign Up</a>
-								<a href="#connect.ejs">Connect</a>
+								<!-- <a href="#connect.ejs">Connect</a> -->
 							</nav>
 							<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 						</div>
