--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -90,7 +90,7 @@
             <div class="single-footer-widget">
               <h6>About Us</h6>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+                Created as a way to get veterans to connect together and help eachother as they transition back into society
               </p>
             </div>
           </div>
