--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -44,7 +44,7 @@
                 <a href="/">Home</a>
                 <a href="/login">Log In</a>
                 <a href="/signup">Sign Up</a>
-                <a href="#connect.ejs">Connect</a>
+                <!-- <a href="#connect.ejs">Connect</a> -->
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
             </div>
@@ -63,7 +63,7 @@
         <input name="city" placeholder="City" class="common-input mt-10" required type="text">
         <input name="email" placeholder="Enter email address" class="common-input mt-10" required type="email">
         <input name="password" placeholder="Enter your password" class="common-input mt-10" required type="password">
-        <input type="submit" class="primary-btn mt-20" value="Sign Up" >
+        <input type="submit" class="primary-btn mt-20" value="Sign Up">
         <div class="alert-msg">
         </div>
       </form>
@@ -77,7 +77,7 @@
             <div class="single-footer-widget">
               <h6>About Us</h6>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+                Created as a way to get veterans to connect together and help eachother as they transition back into society
               </p>
             </div>
           </div>
@@ -128,7 +128,7 @@
         <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
           <p class="footer-text m-0">
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+          <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
