--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -45,7 +45,7 @@
                 <a href="/">Home</a>
                 <a href="/login">Log In</a>
                 <a href="/signup">Sign Up</a>
-                <a href="#connect.ejs">Connect</a>
+                <!-- <a href="#connect.ejs">Connect</a> -->
               </nav>
               <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
             </div>
@@ -55,7 +55,7 @@
     </header>
     <!-- End Header Area -->
 
-    <!-- Start Footer Area -->
+    <h2>Start your convo</h2>
 
     <ul id="messages"></ul>
      <form class="chat" action="">
